objects/ASI_TnE_Corp_Card_MCC_Account_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>ASI_TnE_Account_Number__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_MCC_Group_Description__c</fullName>
        <label>MCC Group Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_MCC_Group__c</fullName>
        <label>MCC Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Corp Card MCC Account Mapping</label>
    <listViews>
        <fullName>ASI_TnE_HK_All_Corp_Card_MCC_Account_Mapping</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_MCC_Group__c</columns>
        <columns>ASI_TnE_MCC_Group_Description__c</columns>
        <columns>ASI_TnE_Account_Number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Corp_Card_MCC_Account_Mapping__c.ASI_TnE_HK_Corp_Card_Merchant_Category_Account_Mapping</value>
        </filters>
        <label>All HK Corp Card MCC Account Mapping</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_HK_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MCC-{000000}</displayFormat>
        <label>MCC Account Mapping</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corp Card MCC Account Mapping</pluralLabel>
    <recordTypes>
        <fullName>ASI_TnE_HK_Corp_Card_Merchant_Category_Account_Mapping</fullName>
        <active>true</active>
        <label>TnE HK Corp Card Merchant Category Account Mapping</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>